# simple-client

./: Cargo.toml  README.md  data.txt
src/: cache_read.rs  compute_average.rs  main.rs
