[package]
name = "simple-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
clap = "2.33"
serde = "1.0"
serde_json = "1.0"
url = "2.2.2"
futures-util = "0.3"


