[package]
name = "simple-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = "0.15"
tokio = { version = "1", features = ["full"] }
clap = "2.33"
serde = "1.0"
serde_json = "1.0"
url = "2.2.2"
futures-util = "0.3"
async-tungstenite = "0.18.0"
async-std = "1.9"
env_logger = "0.9.0"


